[package]
name = "imagebuddy"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.25.0"
eframe = { version = "0.25.0", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
image = { version = "0.24.8", features = ["jpeg", "png"] }
crossbeam-channel = "0.5.11"

env_logger = "0.10"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
